Revision history for Perl extension Statistics::R.

0.08  2011-03-01
    - Pass options in new() to Statistics::R::Bridge constructor (RT #63906)

0.07  2010-11-08
    - Tidy up SYNOPSIS (RT #62776)
    - Fix undef warning on Win32 (RT #62776)
    - Fix is_started() method (RT #62776)

0.06  2010-09-17
    - Fix error() when used as an accessor (RT #61335)
    - Silence DESTROY() when R is not found
    - Fix "uninitialized value" warning in read_processR() (RT #61414)

0.05  2010-09-13
    - Major code refactor:
      - strict + warnings wherever possible
      - Removed some layers of abstraction
      - Win32/Linux classes are now simple subs
      - Basic syntax tidying
      - POD fix, plus pod test
    - Skip tests if R is not available

0.04  2010-08-28
    - Basic code cleanup with the intention of doing major refactoring by-and-by
    - Fix the test suite

0.03  2008-08-16
    - Fixed RT Bug #23948: bug in Statistics::R 
    - Fixed --gui
      - RT Bug #17925: R --slave --vanilla --gui=none is now R --slave --vanilla --gui=X11
      - RT Bug #20515: Fwd: Delivery Status Notification (Failure)
      - RT Bug #14324: error message with recent versions of R
      We used the patch from barry.moore since it correctly identifies that we probably 
      don't want the GUI.  
    - Fixed RT Bug #17956: Win32: log_dir is not in tmp_dir by default as advertised

0.02  2004-02-23
    - Just minor changes and POD fix.

0.01  2004-01-29 23:04:46
    - original version;
