@@ -1,10 +1,11 @@
 use strict;
 use warnings;
+use File::Spec::Functions;
 
 use ExtUtils::MakeMaker;
 
 if ( -e 'MANIFEST.SKIP' ) {
-    system( 'pod2text lib/Statistics/R.pm > README' );
+   generate_readme( catfile('lib','Statistics','R.pm'), 'README' ); 
 }
 
 WriteMakefile(
@@ -22,3 +23,11 @@ WriteMakefile(
         'Test::More' => '0.47',
     },
 );
+
+
+sub generate_readme {
+   my ($in, $out) = @_;
+   `pod2text $in $out`;
+   warn "Warning: Could not generate $out.\n$!\n" if $? == -1;
+   return $?; # exit status
+}
